--- a/papers/car-model/model.tex
+++ b/papers/car-model/model.tex
@@ -67,9 +67,9 @@
           $\boldsymbol{\omega}_{o,o}^{(k)}=\mathbf{R}_{o,v}^T
           \boldsymbol{\omega}_{v,v}^{(k)}=
           [\omega_x^{(k)},\omega_y^{(k)},\omega_z^{(k)}]^T$
-         \item $\tan\psi_L^{(k)}=
-           \frac{\tan(\psi^{(k)} L)}{L - e\tan(\psi^{(k)})}$,
-           $\tan\psi_R^{(k)}=\frac{\tan(\psi^{(k)} L)}{L + e\tan(\psi^{(k)})}$
+         \item $\tan(\psi_L^{(k)})=
+           \frac{\tan(\psi^{(k)}) L}{L - e\tan(\psi^{(k)})}$,
+           $\tan(\psi_R^{(k)})=\frac{\tan(\psi^{(k)}) L}{L + e\tan(\psi^{(k)})}$
          \item $\tan(\psi^{(k)})=L\frac{\omega_z^{(k)}}{v_x^{(k)}}$
          \item $\kappa_{rl}v_{rl}^{(k)}=v_x^{(k)}-e\omega_z^{(k)}$
          \item $\kappa_{rr}v_{rr}^{(k)}=v_x^{(k)}+e\omega_z^{(k)}$
