--- a/papers/car-model/model.tex
+++ b/papers/car-model/model.tex
@@ -86,7 +86,7 @@
             a_3\arctan^3(L\frac{\omega_z}{v_x}))$
           \item $\frac{\partial e_0(.)}{\partial L} =
             \frac{\omega_z v_x (a_1 + 2 a_2\arctan(L\frac{\omega_z}{v_x}) +
-            3 a_3\arctan(L\frac{\omega_z}{v_x}))}{v_x^2 + (L\omega_z)^2}$
+            3 a_3\arctan^2(L\frac{\omega_z}{v_x}))}{v_x^2 + (L\omega_z)^2}$
           \item $\frac{\partial e_0(.)}{\partial a_0} = 1$
           \item $\frac{\partial e_0(.)}{\partial a_1} =
             \arctan(L\frac{\omega_z}{v_x})$
@@ -96,10 +96,10 @@
             \arctan^3(L\frac{\omega_z}{v_x})$
           \item $\frac{\partial e_0(.)}{\partial v_x} =
             \frac{-L\omega_z(a_1 + 2 a_2\arctan(L\frac{\omega_z}{v_x}) +
-            3 a_3\arctan(L\frac{\omega_z}{v_x}))}{v_x^2 + (L\omega_z)^2}$
+            3 a_3\arctan^2(L\frac{\omega_z}{v_x}))}{v_x^2 + (L\omega_z)^2}$
           \item $\frac{\partial e_0(.)}{\partial \omega_z} =
             \frac{L v_x(a_1 + 2 a_2\arctan(L\frac{\omega_z}{v_x}) +
-            3 a_3\arctan(L\frac{\omega_z}{v_x}))}{v_x^2 + (L\omega_z)^2}$
+            3 a_3\arctan^2(L\frac{\omega_z}{v_x}))}{v_x^2 + (L\omega_z)^2}$
 
           \item $e_1(.) = v_{rl} - \frac{(v_x - e\omega_z)}{\kappa_{rl}}$
           \item $\frac{\partial e_1(.)}{\partial e} =
