--- a/papers/ivs13/src/model.tex
+++ b/papers/ivs13/src/model.tex
@@ -42,7 +42,7 @@ on the right-hand side of \eqref{eqn:post_calib} may further be factorized into
     p(\boldsymbol{\Theta}, \mathbf{x}_0,\mathcal{L})
     \prod_{k=1}^K p(\mathbf{x}_k\mid\mathbf{x}_{k - 1},\mathbf{u}_k)
     \prod_{k=1}^K\prod_{i=1}^N p(\mathbf{z}_{k_i}\mid\mathbf{x}_k,
-    \mathbf{l}_i,\boldsymbol{\Theta}).
+    \boldsymbol{\ell}_i,\boldsymbol{\Theta}).
 \end{multline}
 
 \noindent We may then approximate \eqref{eqn:post_joint_factorized} with a
@@ -91,8 +91,8 @@ with known covariance $\mathbf{W}_k$ and $\mathbf{N}_k$. Although, the
 functions $\mathbf{h}(\cdot)$ and $\mathbf{g}(\cdot)$ might be nonlinear in
 their parameters, we can approximate
 $p(\mathbf{x}_k\mid\mathbf{x}_{k - 1},\mathbf{u}_k)$ and
-$p(\mathbf{z}_{k_i}\mid\mathbf{x}_k, \mathbf{l}_i,\boldsymbol{\Theta})$ as
-normal distributions through linearization.
+$p(\mathbf{z}_{k_i}\mid\mathbf{x}_k, \boldsymbol{\ell}_i,\boldsymbol{\Theta})$
+as normal distributions through linearization.
 
 \subsection{Least Squares Solution}
 
